gitops/base/networking/traefik/service-v6.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: cluster-0-ie.scr1.rabbito.tech
    meta.helm.sh/release-name: traefik
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  name: traefik-v6
  namespace: networking
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Local
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv6
  ipFamilyPolicy: SingleStack
  # loadBalancerIP: 10.45.0.0
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: web
    - name: websecure
      port: 443
      protocol: TCP
      targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  sessionAffinity: None
  type: LoadBalancer
