gitops/base/networking/traefik/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  name: traefik-metrics
  namespace: networking
spec:
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: metrics
      port: 8082
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
