gitops/base/networking/traefik/dashboard_ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefikdashboard
  namespace: networking
spec:
  routes:
    - match: Host(`traefik.${CLUSTER_NAME}.${DNS_INT_ZONE}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      middlewares:
        - name: ak-outpost-int-fw-auth
          namespace: networking
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard-crt-tls
